Fixed wrong font-size in Account modal.

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -10,13 +10,17 @@
   -ms-transition: ease-in-out 0.2s;
   -o-transition: ease-in-out 0.2s;
   a {
-    font-size: 20px;
+    // font-size: 20px;
     transition: ease-in-out 0.2s;
     -webkit-transition: ease-in-out 0.2s;
     -moz-transition: ease-in-out 0.2s;
     -ms-transition: ease-in-out 0.2s;
     -o-transition: ease-in-out 0.2s;
   }
+}
+
+a.nav-link {
+  font-size: 20px !important;
 }
 
 nav[mode="fixed"].navbar.navbar-expand-lg.navbar-dark.bg-dark {
@@ -97,11 +101,6 @@ nav {
   align-items: center;
   display: flex;
 }
-
-// .bg-dark {
-//   background-color: var(--navigationbarBackground) !important;
-//   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.15);
-// }
 
 .popup-overlay {
   // visibility: hidden;
